--- a/app/sass/src/main-content.scss
+++ b/app/sass/src/main-content.scss
@@ -1,6 +1,6 @@
 
 .slider {
-  background-image: url('/../../img/slider-bg.jpg');
+  background-image: url('../../img/slider-bg.jpg');
   background-size: cover;
   background-repeat:no-repeat;
   background-position: center;
