--- a/app/css/main.css
+++ b/app/css/main.css
@@ -148,7 +148,7 @@ a:hover {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); }
 
 .slider {
-  background-image: url("/../../img/slider-bg.jpg");
+  background-image: url("../../img/slider-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
