change images bg ways

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -148,7 +148,7 @@ a:hover {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); }
 
 .slider {
-  background-image: url("../../img/slider-bg.jpg");
+  background-image: url("../img/slider-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -214,7 +214,7 @@ a:hover {
   opacity: 0.5; }
 
 .play__btn {
-  background-image: url("../../img/play-icon.svg");
+  background-image: url("../img/play-icon.svg");
   background-size: cover;
   height: 186px;
   width: 186px; }
@@ -398,7 +398,7 @@ a:hover {
         left: -60px;
         height: 48px;
         width: 48px;
-        background-image: url("../../img/ic_plc-farm.svg"); }
+        background-image: url("../img/ic_plc-farm.svg"); }
 
 .comparison__right {
   max-width: 300px; }
@@ -415,7 +415,7 @@ a:hover {
         left: 254px;
         height: 48px;
         width: 48px;
-        background-image: url("../../img/ic_plc-farm.svg"); }
+        background-image: url("../img/ic_plc-farm.svg"); }
 
 .comparison__title {
   margin-bottom: 20px;
@@ -465,7 +465,7 @@ a:hover {
   .salary__box .salary__img {
     height: 90px;
     width: 90px;
-    background-image: url("../../img/premium.svg");
+    background-image: url("../img/premium.svg");
     margin-bottom: 32px; }
   .salary__box .salaryItem__salary {
     font-family: 'Roboto', sans-serif;
